# resume-builder-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  TODOS.md  check_email_key.py  conftest.py  create_superuser.py  db.sqlite3  deployment_documentation.md  development_documentation.md  development_startegy.md  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker_commands.md  docker_documentation.md  entrypoint-prod.sh  entrypoint.sh  main.py  manage.py  project_journal.md  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: docker-publish.yml
accounts/: adapters.py  apps.py  serializers.py  social_views.py  views.py
accounts/tests/: conftest.py  factories.py  test_accounts.py
ai_generation/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  tasks.py  views.py
ai_generation/migrations/: 0001_initial.py  0002_remove_documentversion_version_number_and_more.py  0003_add_documentversion_context_hash.py  0004_remove_documentversion_unique_context_hash_per_document_and_more.py  0005_documentversion_updated_at.py  0006_remove_documentversion_unique_version_document_per_document_and_more.py  0007_ensure_documentversion_updated_at.py  0008_remove_document_unique_job_per_user_and_more.py
ai_generation/tests/: factory.py  test_ai.py  test_duplicates.py  test_permissions.py  test_versions.py
applicant_profile/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
forms/: applicant_context.json  job_description.json
job_profile/: admin.py  apps.py  models.py  serializers.py  views.py
job_profile/tests/: factories.py  (+1 more)
nginx/: dev.conf  prod.conf
resume_builder/: asgi.py  celery.py  middleware.py  settings.py  urls.py  utils.py  views.py  wsgi.py
templates/: markdown_styling.html
(+16 files in other folders)
