[project]
name = "resume-builder-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=5.0.2",
    "django>=6.0",
    "django-allauth[socialaccount]>=65.13.1",
    "django-environ>=0.12.0",
    "djangorestframework-simplejwt>=5.5.1",
    "environ>=1.0",
    "factory-boy>=3.3.3",
    "markdown>=3.10",
    "openai>=2.9.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "weasyprint>=67.0",
]
